--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $base-background-color: $oc-gray-1;
 
 // 基本の文字色
 $base-text-color: $oc-gray-9;
+$base-text-bk-color: $oc-gray-0;
 
 // テーマカラー
 $header-color: $oc-blue-3;
